--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hi。宝贝！</title>
+    <title>Hi。臭坑！</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href="./main.css" rel="stylesheet">
-<link href="./main.css" rel="stylesheet"></head>
+</head>
 <body>
     <div id="app"></div>
     <script type="text/javascript" src="./main.js"></script>
-<script type="text/javascript" src="./main.js"></script></body>
+</body>
 
 </html>
